# ssi-pylint-odoo

./: .coveragerc  .travis.yml  README.rst  setup.cfg  setup.py  tox.ini
ssi_pylint_odoo/checkers/: no_modules.py
ssi_pylint_odoo/test/: main.py
ssi_pylint_odoo/test_repo/broken_module2/: __openerp__.py
ssi_pylint_odoo/test_repo/broken_module3/: __openerp__.py
ssi_pylint_odoo/test_repo/eleven_module/: __manifest__.py
ssi_pylint_odoo/test_repo/test_module/: __openerp__.py
ssi_pylint_odoo/test_repo/twelve_module/: __manifest__.py
