[metadata]
name = ssi-pylint-odoo
author = PT. Simetri Sinergi Indonesia
author_email = support@simetri-sinergi.id
summary = Pylint plugin for Odoo Development in Simetri Sinergi Indonesia
license = APGL3
home_page = https://github.com/simetri-sinergi-id/ssi-pylint-odoo
description-file =
    README.rst
    ChangeLog
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
[files]
packages =
    ssi_pylint_odoo
